# resources/views/pages/home.blade.php
@@ -25,13 +25,13 @@
         $counter++;
         @endphp
 
-        <div class="col-lg-4 align-items-stretch">
+        <div class="col-lg-4 align-items-stretch card-container">
             <div class="card mb-4">
                 <div class="card-body text-center">
                         <a href="{{url('/auction/'.$auction->id)}}">
                             <img src= "{{$img['link']}}" class="figure-img img-fluid category" alt="Auction image" width="150" height="150">
                         </a>
-                  <h5 class="my-3">{{$auction['name']}}</h5>
+                  <h5 class="my-3 auctionName">{{$auction['name']}}</h5>
                   <p class="text mb-1">{{$auction['current_bid']}} $</p>
                 </div>
               </div>
